fleat: added SQLite
